@@ -17,6 +17,7 @@ systemd System and Service Manager
  	- remove “bus_kernel_take_fd” function;
  	- remove “bus_kernel_write_message” function;
  	- remove “bus_kernel_read_message” function;
+ 	- remove “bus_kernel_create_domain” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
